--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"analytics": "ts-node ./src/wallet-analytics.ts",
 		"signal": "ts-node ./src/token-heatmap.ts",
 		"test": "ts-node ./src/test.ts",
+		"dune": "ts-node ./src/dune.ts",
 		"build": "node ./build.js"
 	},
 	"dependencies": {
