--- a/.github/workflows/run-js-cron.yml
+++ b/.github/workflows/run-js-cron.yml
@@ -17,12 +17,17 @@ jobs:
         uses: actions/setup-node@v3  # 设置 Node.js 环境
         with:
           node-version: '18'  # 可以根据需要修改 Node.js 版本
-          
+
+      - name: 设置 pnpm 环境
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: 安装依赖
-        run: npm install
-        
+        run: pnpm install
+
       - name: 打包
-        run: npm run build
+        run: pnpm build
 
       - name: 运行 JavaScript 文件
         run: node dist/cron.js  # 用 node 命令运行你的 JS 文件
