--- a/.github/workflows/run-js-cron.yml
+++ b/.github/workflows/run-js-cron.yml
@@ -8,10 +8,23 @@ on:
 jobs:
   run-js:
     runs-on: ubuntu-latest  # 选择操作系统环境
+    permissions:
+      id-token: write  # 允许 GitHub Actions 写入身份令牌
+      contents: read   # 允许访问仓库内容
 
     steps:
       - name: Checkout 代码
         uses: actions/checkout@v2  # 获取代码
+
+      - name: Set up Google Cloud authentication
+        uses: google-github-actions/auth@v1
+        with:
+          workload_identity_provider: projects/${{ secrets.GCP_PROJECT_ID }}/locations/global/workloadIdentityPools/${{ secrets.GCP_POOL_NAME }}/providers/${{ secrets.GCP_PROVIDER_NAME }}
+          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+          audience: https://iam.googleapis.com/projects/${{ secrets.GCP_PROJECT_ID }}/locations/global/workloadIdentityPools/${{ secrets.GCP_POOL_NAME }}/providers/${{ secrets.GCP_PROVIDER_NAME }}
+
+      - name: List Google Cloud Storage buckets
+        run: gcloud storage buckets list
 
       - name: 设置 Node.js 环境
         uses: actions/setup-node@v3  # 设置 Node.js 环境
