--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,6 @@
 name: 测试上传
 
 on:
-  schedule:
-    - cron: '0 22 * * *'  # 每天午夜 12 点执行 (可以根据需要修改时间)
   workflow_dispatch:  # 允许手动触发工作流
 
 jobs:
@@ -15,6 +13,13 @@ jobs:
     steps:
       - name: Checkout 代码
         uses: actions/checkout@v2  # 获取代码
+
+      - name: 打印 Secrets 值
+        run: |
+          echo "GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}"
+          echo "GCP_POOL_NAME: ${{ secrets.GCP_POOL_NAME }}"
+          echo "GCP_PROVIDER_NAME: ${{ secrets.GCP_PROVIDER_NAME }}"
+          echo "GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
       - name: Set up Google Cloud authentication
         uses: google-github-actions/auth@v1
