--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,20 +14,15 @@ jobs:
       - name: Checkout 代码
         uses: actions/checkout@v2  # 获取代码
 
-      - name: 打印 Secrets 值
-        run: |
-          echo "GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}"
-          echo "GCP_POOL_NAME: ${{ secrets.GCP_POOL_NAME }}"
-          echo "GCP_PROVIDER_NAME: ${{ secrets.GCP_PROVIDER_NAME }}"
-          echo "GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}"
-
       - name: Set up Google Cloud authentication
         uses: google-github-actions/auth@v1
         with:
-          create_credentials_file: true
-          workload_identity_provider: 'projects/psyched-summer-450303-h3/locations/global/workloadIdentityPools/updrive/providers/github'
-          service_account: 'zuoyong993@gmail.com'
-          
+          create_credentials_file: true  # 生成凭证文件
+          workload_identity_provider: 'projects/psyched-summer-450303-h3/locations/global/workloadIdentityPools/updrive/providers/github'  # Workload Identity Federation 提供者
+          service_account: 'zuoyong993@psyched-summer-450303-h3.iam.gserviceaccount.com'  # 这里使用服务帐号的完整名称
+          audience: 'https://iam.googleapis.com/projects/psyched-summer-450303-h3/locations/global/workloadIdentityPools/updrive/providers/github'  # 对应的受众
+          project_id: 'psyched-summer-450303-h3'  # 手动指定项目 ID
+
       - name: List Google Cloud Storage buckets
         run: gcloud storage buckets list
 
