--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,10 +20,10 @@ jobs:
           create_credentials_file: true  # 生成凭证文件
           workload_identity_provider: 'projects/538512390321/locations/global/workloadIdentityPools/updrive/providers/github'  # Workload Identity Federation 提供者
           service_account: 'googledrive@psyched-summer-450303-h3.iam.gserviceaccount.com'  # 这里使用服务帐号的完整名称
-
-      - name: List Google Cloud Storage buckets
-        run: gcloud storage buckets list
-
+          
+      - name: 'Set up gcloud'
+        uses: google-github-actions/setup-gcloud@v1
+      
       - name: 设置 Node.js 环境
         uses: actions/setup-node@v3  # 设置 Node.js 环境
         with:
