--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           create_credentials_file: true  # 生成凭证文件
           workload_identity_provider: 'projects/538512390321/locations/global/workloadIdentityPools/updrive/providers/github'  # Workload Identity Federation 提供者
           service_account: 'googledrive@psyched-summer-450303-h3.iam.gserviceaccount.com'  # 这里使用服务帐号的完整名称
-          
+
       - name: 'Set up gcloud'
         uses: google-github-actions/setup-gcloud@v1
       
@@ -41,4 +41,4 @@ jobs:
         run: pnpm build
 
       - name: 运行 JavaScript 文件
-        run: node dist/cron.js  # 用 node 命令运行你的 JS 文件
+        run: node dist/test.js  # 用 node 命令运行你的 JS 文件
