--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ jobs:
         uses: google-github-actions/auth@v1
         with:
           create_credentials_file: true  # 生成凭证文件
-          workload_identity_provider: 'projects/538512390321/locations/global/workloadIdentityPools/updrive/providers/github'  # Workload Identity Federation 提供者
-          service_account: 'googledrive@psyched-summer-450303-h3.iam.gserviceaccount.com'  # 这里使用服务帐号的完整名称
+          credentials_file: ${{ secrets.GCP_SA_KEY }}
+          project_id: 'psyched-summer-450303-h3'
 
       - name: 'Set up gcloud'
         uses: google-github-actions/setup-gcloud@v1
